[package]
name = "rust_lib"
version = "0.1.0"
authors = ["zWindr <zpsyhapcst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
libc = "*"
ndarray = "0.15.1"
ndarray-stats = "0.5"
noisy_float = "0.2.0"
criterion = "0.3"

[lib]
name = "rust_lib"
crate-type = ["cdylib", "rlib"]


[[bench]]
name = "benchmark"
harness = false
