[package]
name = "rust_pyo3"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "chrono"] }
statrs = "0.18"
csv = "1.3"
chrono = { version = "0.4", features = ["serde", "clock"] }

[dev-dependencies]
float-cmp = "0.10"
